--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEDIA</title>
+    <title>Form</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
-    <figure>
-        <img src="download.jpg"><br>
-        <figcaption>BRUNO MARS 😉</figcaption>
-    </figure>
+    <form action="">
+    <h1 style="display: inline-block;">REGISTRATION FORM</h1> &nbsp <i class="fa-solid fa-user-tie"></i> <hr>
+    <i class="fa-solid fa-envelope"></i> &nbsp<input type="text" placeholder="First Name"><hr>
+    <input type="text" placeholder="Last Name"><hr>
+    <input type="email" placeholder="Email"><hr>
+    <i class="fa-solid fa-mobile">&nbsp</i><input type="text" placeholder="Mobile number" pattern="[0-9]{10}"
+    required><hr>
+    <i class="fa-solid fa-person">&nbsp</i><input type="radio" name="Gender" value="Male">Male 
+    <i class="fa-solid fa-person-dress">&nbsp</i><input type="radio" name="Gender" value="Female">Female <hr>
+    <i class="fa-solid fa-location-dot">&nbsp</i><textarea  placeholder="Address"  rows="10"></textarea><hr>
+    <!-- <input type="button" placeholder="signin"> -->
+    <button>SIGN IN</button>
 
-    <figure>
-    <audio controls src="Bruno Mars - Just The Way You Are (Official Music Video).mp3">Bruno Mars</audio> 
-    <figcaption>BE HAPPY!!!!!🤗</figcaption>
-</figure><br>
-
-    <p style="text-align: center;">JUST THE WAY YOU ARE</p> <br>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/LjhCEhWiKXk"      title="YouTube video player"frameborder="0"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"allowfullscreen></iframe>
+    </form>
 </body>
-
 </html>
